--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,8 @@
-# .github/workflows/ci.yml
 name: ci 
 on:
   push:
-    branches: 
+    branches:
+      - master 
       - main
 permissions:
   contents: write
@@ -25,10 +25,5 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
-      - name: Install dependencies
-        run: |
-          pip install mkdocs-material
-          pip install mkdocs-glightbox
-          pip install mkdocs-git-revision-date-localized-plugin
-      - name: Deploy
-        run: mkdocs gh-deploy --force
+      - run: pip install mkdocs-material 
+      - run: mkdocs gh-deploy --force
