--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,11 +8,11 @@ site_author: Metriver # your name
 theme:
   name: material
   # custom_dir: docs/overrides #覆写路径
-  font: #谷歌字体，自行搜索
-    text: Bitter  #文本字体
-    code: Roboto Mono  #代码字体
-  # logo: assets/favicon.png #左上角logo，可插入图片链接
-  favicon: https://s2.loli.net/2024/04/26/PmRdM9iGnvOJHgu.png # 网页icon
+  # font: #谷歌字体，自行搜索
+  #   text: Bitter  #文本字体
+  #   code: Roboto Mono  #代码字体
+  logo: assets/avatar.jpg #左上角logo，可插入图片链接
+  favicon: assets/river favicon.svg # 网页icon
   palette:
     - media: "(prefers-color-scheme)"
       toggle:
@@ -21,7 +21,7 @@ theme:
     #primary: blue grey
     - media: "(prefers-color-scheme: light)"
       scheme: default # 日间模式
-      primary: blue grey # 上方的
+      primary: indigo # 上方的
       accent: blue # 链接等可交互元件的高亮色
       # teal
       toggle:
@@ -65,14 +65,29 @@ repo_url: https://github.com/metriver/metriver.github.io # 右上角点击跳转
 repo_name: Mkdocs-Metriver # 右上角的名字
 # [Navigtion]
 nav:
-  - 主页: index.md
-  # - 标签: tag.md
+  - Foe: index.md
+  - Blog:
+      - blog\index.md
+  - Learn:
+    - Learn\index.md
+    - Papers:
+      - 软件与编程: Learn\papers\软件编程试卷.md
+  - Tech:
+    - Tech\index.md
+    - Web_construct:
+      - obsidian: Tech\Blog_Construct\obsidian&git.md
   # - 留言板: liuyanban.md
   - Essays: 
       - Essays\index.md
-      - JiNan: Essays\jinan.md
-      - Beijing: Essays\beijing.md
-
+      - Travel:
+        - JiNan: Essays\Travel\jinan.md
+        - Beijing: Essays\Travel\beijing.md
+        - xian: Essays\Travel\xian.md
+      - Nag:
+        - Talk1: Essays\Nag\talk1.md
+        - Talk2: Essays\Nag\talk2.md
+  - Tags: tag.md
+  - Links: link.md
   # - Links: about/link.md
   #     - 友链: about/link.md
   # - 关于:
@@ -83,61 +98,18 @@ nav:
 
 copyright: Copyright &copy; 2023~2025 Metriver All Rights Reserved. # 左下角的版权声明
 extra:
-#   alternate:
-#     - name: 简体中文
-#       link: /
-#       # https://wcowin-work.translate.goog/?_x_tr_sl=auto&_x_tr_tl=en&_x_tr_hl=zh-CN&_x_tr_pto=wapp
-#       lang: zh   
-#     - name: English
-#       link: /Mkdocs-Wcowin/en/
-#       # https://wcowin-work.translate.goog/?_x_tr_sl=auto&_x_tr_tl=en&_x_tr_hl=zh-CN&_x_tr_pto=wapp
-#       lang: en
-#     - name: China(TW)
-#       link: /Mkdocs-Wcowin/ZH-TW/
-#       # https://wcowin-work.translate.goog/?_x_tr_sl=zh-CN&_x_tr_tl=zh-TW&_x_tr_hl=zh-CN&_x_tr_pto=wapp
-#       lang: zh-TW
   generator: false  #是否删除页脚显示“使用 MkDocs 材料制造”
   social:
-#     - icon: fontawesome/brands/weixin
-#       link: https://s1.imagehub.cc/images/2024/02/02/bb9ee71b03ee7a3b87caad5cc4bcebff.jpeg
-#       name: Wechat
-#     - icon: fontawesome/brands/telegram
-#       link: https://t.me/wecowin
-#       name: telegram
-#     - icon: fontawesome/brands/x-twitter #联系方式图标 : https://fontawesome.com/ 去这里找图标
-#       link: https://twitter.com/wcowin_
     - icon: fontawesome/brands/github
       link: https://github.com/metriver
-
-#     - icon: fontawesome/regular/envelope #联系方式图标
-#       link: mailto:<wangkewen821@gmail.com> #邮件联系方式
-#     - icon: fontawesome/brands/bilibili
-#       link: https://space.bilibili.com/1407028951/lists/4566631?type=series
+    - icon: fontawesome/brands/bilibili
+      link: https://space.bilibili.com/437493260
+    - icon: fontawesome/regular/envelope #联系方式图标
+      link: mailto:<bronze-age@qq.com> #邮件联系方式
 #   analytics:
 #     provider: google #谷歌分析
 #     property: ##如果你 clone 了my模板，请将这个修改为你的
 
-#     # 网页底部反馈
-#     feedback:
-#       title: 此页面有帮助吗？
-#       ratings:
-#         - icon: material/thumb-up-outline #图标可自定义
-#           name: This page was helpful
-#           data: 1
-#           note: >-
-#             谢谢你的反馈！
-#         - icon: material/thumb-down-outline
-#           name: This page could be improved
-#           data: 0
-#           note: >-
-#             Thanks for your feedback! Help us improve this page by
-#             using our <a href="https://marketingplatform.google.com/about/analytics/" target="_blank" rel="noopener">feedback form</a>.
-#   # cookies设置（可选）
-#   # consent:
-#   #   title: Cookie consent
-#   #   description: >-
-#   #     我们也使用cookies来识别您的重复访问和偏好来衡量我们文档的有效性以及用户是否找到他们要找的东西。
-#   #     如果你同意,你可以帮助我们让我们的网站更好
 
 plugins:
   - search #搜索配置
@@ -195,14 +167,14 @@ plugins:
       authors_file: "{blog}/.authors.yml" #作者信息
   - tags
 
-markdown_extensions: #详见https://squidfunk.github.io/mkdocs-material/setup/extensions/python-markdown-extensions/ 和 https://squidfunk.github.io/mkdocs-material/setup/extensions/python-markdown/
+markdown_extensions:
   - abbr
   - attr_list
   - admonition
   - def_list
   - footnotes
   - md_in_html
-  # - meta # 支持Markdown文件上方自定义标题标签等
+  - meta # 支持Markdown文件上方自定义标题标签等
   - pymdownx.caret
   - pymdownx.betterem
   - pymdownx.critic
@@ -238,15 +210,15 @@ markdown_extensions: #详见https://squidfunk.github.io/mkdocs-material/setup/ex
   #     slugify: !!python/object/apply:pymdownx.slugs.slugify {kwds: {case: lower}}
   #     permalink: "\ue157"
 
-# extra_javascript:
-#   # - javascripts/extra.js #自定义javascript
-#   - https://cdn.jsdelivr.net/gh/Wcowin/Wcowin.github.io@main/docs/javascripts/extra.js  # extra的cdn
-#   - javascripts/mathjax.js #Latex支持
-#   - https://polyfill.io/v3/polyfill.min.js?features=es6 #Latex支持
-#   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js #Latex支持
-#   # - ckplayer/js/ckplayer.js #播放器配置
-#   # - https://cdn.jsdelivr.net/npm/gitalk@latest/dist/gitalk.min.js  #gitalk支持
-#   - https://cdn.jsdelivr.net/npm/mermaid@10.0.2/dist/add-html-label-6e56ed67.min.js #忘了
+extra_javascript:
+  # - javascripts/extra.js #自定义javascript
+  - https://cdn.jsdelivr.net/gh/Wcowin/Wcowin.github.io@main/docs/javascripts/extra.js  # extra的cdn
+  - javascripts/mathjax.js #Latex支持
+  - https://polyfill.io/v3/polyfill.min.js?features=es6 #Latex支持
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js #Latex支持
+  # - ckplayer/js/ckplayer.js #播放器配置
+  # - https://cdn.jsdelivr.net/npm/gitalk@latest/dist/gitalk.min.js  #gitalk支持
+  - https://cdn.jsdelivr.net/npm/mermaid@10.0.2/dist/add-html-label-6e56ed67.min.js #忘了
 
 extra_css:
   - stylesheets/extra.css # 自定义CSS
