--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,6 +72,7 @@ nav:
       - blog/index.md
   - Learn:
       - Learn/index.md
+      - Language_C_Notes: Learn/Lang-C.md
       - Papers:
           - 软件与编程: Learn/papers/软件编程试卷.md
   - Tech:
@@ -106,46 +107,19 @@ extra:
 
 plugins:
   - search #搜索配置
-  # - glightbox:
-  #     enabled: !ENV [glightbox, false]
-  #     touchNavigation: true
-  #     loop: false
-  #     effect: fade
-  #     slide_effect: slide
-  #     width: 100%
-  #     height: auto
-  #     zoomable: true
-  #     draggable: true
-  #     skip_classes:
-  #       - custom-skip-class-name
-  #     auto_caption: false
-  #     caption_position: bottom
-  #     background: white
-  #     shadow: true
-  #     manual: false
-  # - git-committers:
-  #     enabled: !ENV [git-committers, false]
-  #     repository: Wcowin/Mkdocs-Wcowin
-  #     branch: main
-  #     exclude:
-  #       - index.md
-  #       - tag.md
-  #       - liuyanban.md
-  #       - blog/posts/update.md
-  #       - blog/posts/wkw.md
-  #       - about/link.md
-  # - git-revision-date-localized:
-  #     enabled: !ENV [git-revision-date-localized, false]
-  #     type: iso_date
-  #     enable_creation_date: false
-  #     exclude:
-  #       - index.md
-  #       - tag.md
-  #       - liuyanban.md
-  #       - blog/posts/update.md
-  #       - blog/posts/wkw.md
-  #       - about/link.md
-  #       - websitebeauty/linktech.md
+
+  # 显示文件的最后修改时间，基于git提交记录
+  - git-revision-date-localized:
+      type: datetime
+      timezone: Asia/Shanghai
+      locale: zh
+      enable_creation_date: true
+      # enable_git_follow: false # 禁用 git 文件跟踪行为
+      exclude:
+        - index.md
+        - link.md
+      strict: false
+
   - blog: #博客配置
       post_date_format: full #时间
       draft: true
@@ -208,17 +182,17 @@ markdown_extensions:
 extra_javascript:
   # - javascripts/extra.js #自定义javascript
   - https://cdn.jsdelivr.net/gh/Wcowin/Wcowin.github.io@main/docs/javascripts/extra.js # extra的cdn
-  - javascripts/mathjax.js #Latex支持
+  # - javascripts/mathjax.js #Latex支持
   - https://polyfill.io/v3/polyfill.min.js?features=es6 #Latex支持
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js #Latex支持
   # - ckplayer/js/ckplayer.js #播放器配置
-  # - https://cdn.jsdelivr.net/npm/gitalk@latest/dist/gitalk.min.js  #gitalk支持
+
   - https://cdn.jsdelivr.net/npm/mermaid@10.0.2/dist/add-html-label-6e56ed67.min.js #忘了
 
 extra_css:
   - stylesheets/extra.css # 自定义CSS
-  - stylesheets/link.css #友链配置
-  - stylesheets/customize.css # 搜索圆角优化
+  # - stylesheets/link.css #友链配置
+  # - stylesheets/customize.css # 搜索圆角优化
   # - assets/stylesheets/portfolio.css
   # - stylesheets/video.css #播放器可选配置
   # - https://cdn.jsdelivr.net/npm/gitalk@latest/dist/gitalk.css #gitalk支持
