在导航中添加数据结构笔记链接

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -73,6 +73,7 @@ nav:
   - Learn:
       - Learn/index.md
       - Language_C_Notes: Learn/Lang-C.md
+      - DataStructure_Notes: Learn/DataStruct.md
       - Papers:
           - 软件与编程: Learn/papers/软件编程试卷.md
   - Tech:
